# OpenPatch-MCP

./: .gitignore  Cargo.toml  README.md  settings.toml
docs/: README.md  io-cases.md
reference/: lib.rs  parser.rs  seek_sequence.rs  standalone_executable.rs
src/: cli.rs  command.rs  config.rs  engine.rs  lib.rs  locator.rs  main.rs  parser.rs  patch.rs  path_expansion.rs  seek_sequence.rs  server.rs  service.rs  text.rs
src/command/: tests.rs
src/engine/: patch.rs  path_expansion.rs  seek_sequence.rs
src/engine/parser/: boundary.rs
src/engine/patch/: content.rs
src/engine/patch/content/: matching.rs  tests.rs
src/engine/patch/content/tests/: idempotence.rs
src/engine/path_expansion/: windows.rs
src/engine/seek_sequence/: normalize.rs  tests.rs
src/engine/seek_sequence/nearest/: alignment.rs  tests.rs
src/parser/: boundary.rs  parse.rs
src/patch/: content.rs  fs_ops.rs  summary.rs  tests.rs
src/patch/content/: diagnostic.rs  replacements.rs  tests.rs
src/path_expansion/: home.rs  tests.rs  variables.rs
src/seek_sequence/: nearest.rs  normalize.rs  relaxed.rs  tests.rs  tier.rs
src/seek_sequence/nearest/: corpus.rs  ranking.rs  scoring.rs  tests.rs
src/service/: cli.rs  command.rs  operation.rs  server.rs
src/service/operation/: apply.rs  files.rs  merge.rs  model.rs  output.rs  store.rs  tests.rs  undo.rs
src/service/operation/output/: structured.rs
src/service/server/: tests.rs
