[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

absolute_paths = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
big_endian_bytes = "allow"
cargo_common_metadata = "allow"
else_if_without_else = "allow"
exhaustive_structs = "allow"
field_scoped_visibility_modifiers = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
inline_modules = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
non_ascii_literal = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_with_shorthand = "allow"
question_mark_used = "allow"
redundant_pub_crate = "allow"
self_named_module_files = "allow"
semicolon_outside_block = "allow"
separated_literal_suffix = "allow"
similar_names = "allow"
single_call_fn = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
undocumented_unsafe_blocks = "allow"
unwrap_used = "allow"
wildcard_dependencies = "allow"

[lints.rust]
future-incompatible = "warn"
let-underscore = "warn"
keyword-idents = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"

missing_docs = "allow"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[package]
name = "apply-patch-mcp"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = ">=1.0.104"
bytecount = ">=0.6.9"
clap = { version = ">=4.6.2", features = ["derive"] }
diffy = ">=0.5.1"
directories = ">=6.0.0"
fast-uuid-v7 = ">=0.1.6"
itoa = ">=1.0.18"
memchr = ">=2.8.2"
mimalloc = { version = ">=0.1.48", features = ["v3"] }
rmcp = { version = ">=2.2.0", features = [
    "client",
    "server",
    "macros",
    "transport-io",
] }
rusqlite = { version = ">=0.40.1", features = ["bundled"] }
rustc-hash = ">=2.1.3"
schemars = ">=1.2.1"
serde = { version = ">=1.0.229", features = ["derive", "unstable"] }
shellexpand = ">=3.1.2"
smallvec = ">=1.15.2"
thiserror = ">=2.0.19"
tokio = { version = ">=1.52.3", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
unicode-normalization = ">=0.1.25"

[dev-dependencies]
tempfile = ">=3.27.0"
